# GoldenLandEditor

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  main.cpp  vcpkg.json
.github/workflows/: build-windows-x64.yml  build-windows.yml
docs/: AgeScript.md  AgeScriptFunctions.md  ConsoleCommands.md
resources/: EmbeddedResources.cmake  bin2c.cpp  resources.rc.in
resources/win/: resources.rc.in
src/: Application.cpp  Application.h  Cache.h  CsExecutor.cpp  CsExecutor.h  FileLoader.h  ImguiHelper.cpp  ImguiHelper.h  Level.cpp  Level.h  Resources.cpp  Resources.h  RootDirectoryContext.cpp  RootDirectoryContext.h  Settings.cpp  Settings.h  StringUtils.cpp  StringUtils.h  Texture.cpp  Texture.h  TextureLoader.cpp  TextureLoader.h  Types.h  main.cpp
src/enums/: CsFunctions.cpp  CsFunctions.h  CsOpcodes.cpp  CsOpcodes.h
src/files/: BgMdfFile.h
src/graphics/: Animation.h  Texture.h  TextureLoader.cpp  TextureLoader.h  TimedAnimation.h
src/parsers/: CSX_Parser.cpp  CSX_Parser.h  CS_Parser.cpp  CS_Parser.h  LAO_Parser.cpp  LAO_Parser.h  LVL_Parser.cpp  LVL_Parser.h  MDF_Parser.cpp  MDF_Parser.h  SDB_Parser.cpp  SDB_Parser.h  SEF_Parser.cpp  SEF_Parser.h
src/settings/: FontSettings.cpp
src/utils/: AnimationCachedLoader.cpp  AnimationCachedLoader.h  DebugLog.cpp  DebugLog.h  DialogTests.cpp  DialogTests.h  FileLoader.cpp  FileLoader.h  FileUtils.cpp  FileUtils.h  Formatters.h  ImGuiWidgets.cpp  ImGuiWidgets.h  ImguiHelper.cpp  IoUtils.cpp  IoUtils.h  Platform.h  RenderUtils.cpp  RenderUtils.h  StringUtils.cpp  StringUtils.h  TextureLoader.cpp  TextureLoader.h  TracyProfiler.cpp  TracyProfiler.h
src/windows/: CsExecutorViewer.cpp  CsExecutorViewer.h  CsViewer.cpp  CsViewer.h  CsxViewer.cpp  CsxViewer.h  FontSettings.cpp  FontSettings.h  LevelPicker.cpp  LevelPicker.h  LevelViewer.cpp  LevelViewer.h  MdfViewer.cpp  MdfViewer.h  SdbViewer.cpp  SdbViewer.h
test/: CMakeLists.txt  StringUtilsTest.h  main.cpp
